--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>{{ page.title }}</title>
-<link rel="shortcut icon" href="../img/favicon.png">
-<link rel="stylesheet" href="../css/bootstrap.min.css">
-<link rel="stylesheet" href="../css/highlight.css">
-<link rel="stylesheet" href="../css/style.css">
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<link rel="shortcut icon" href="{{site.baseurl}}/img/favicon.png">
+<link rel="stylesheet" href="{{site.baseurl}}/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{site.baseurl}}/css/highlight.css">
+<link rel="stylesheet" href="{{site.baseurl}}/css/style.css">
+<script src="{{site.baseurl}}/js/jquery.min.js"></script>
+<script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="navbar navbar-static-top">
