--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -62,7 +62,7 @@
 					<div class="classify">
 						<h4>文章分类</h4>
 						<ul class="list-unstyled">
-							{% for post in site.categories %}
+							{% for post in site.posts %}
 								<li><a href="#">{{ post.type }}</a></li>
 							{% endfor %}
 						</ul>
