--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -16,9 +16,8 @@
 			<div class="container">
 				<div class="nav-collapse collapse">
 					<ul class="nav nav-pills">
-						<li class="active"><a href="#">首页</a></li>
-						<li><a href="#">文章列表</a></li>
-						<li><a href="#">关于</a></li>
+						<li><a href="/">首页</a></li>
+						<li class="active"><a href="/blog_list.html">文章列表</a></li>
 					</ul>
 					<form class="navbar-form pull-right">
 						<input class="span3" type="text" placeholder="关键字...">
