--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -17,7 +17,7 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav nav-pills">
 						<li><a href="/">首页</a></li>
-						<li class="active"><a href="/blog_list.html">文章列表</a></li>
+						<li class="active"><a href="/list/">文章列表</a></li>
 					</ul>
 					<form class="navbar-form pull-right">
 						<input class="span3" type="text" placeholder="关键字...">
