--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -61,8 +61,8 @@
 					<div class="classify">
 						<h4>文章分类</h4>
 						<ul class="list-unstyled">
-							{% for post in site.posts %}
-								<li><a href="#">{{ post.type }}</a></li>
+							{% for category in site.categories %}
+								<li><a href="/categories/{{ category | first }}/">{{ category | first }} {{ category | last | size }}</a></li>
 							{% endfor %}
 						</ul>
 					</div>
