--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 					<div class="post">
 						{{ content }}
 					</div>
-					<div class="pagination pagination-large">
+					<!--div class="pagination pagination-large">
 						<ul>
 							<li class="disabled"><a href="#">&laquo;</a></li>
 							<li class="active"><a href="#">1</a></li>
@@ -49,7 +49,7 @@
 							<li><a href="#">5</a></li>
 							<li><a href="#">&raquo;</a></li>
 						</ul>
-					</div>
+					</div-->
 				</div>
 				<div class="span3 offset1">
 					<div class="about">
