--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,14 @@ body {
 }
 
 h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6 {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	color: #333;
 	margin-top: 0;
+}
+
+li {
+	line-height:150%;
 }
 
 .header {
