--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,11 +60,9 @@
 					</div>
 					<div class="classify">
 						<h4>文章分类</h4>
-						<ul class="list-unstyled">
-							{% for category in site.categories %}
-								<li><a href="/categories/{{ category | first }}/">{{ category | first }} {{ category | last | size }}</a></li>
-							{% endfor %}
-						</ul>
+						{% for category in site.categories %}
+							<p><a href="/categories/{{ category | first }}/">{{ category | first }}</a>&nbsp;&nbsp;&nbsp;&nbsp;{{ category | last | size }}</p>
+						{% endfor %}
 					</div>
 				</div>
 			</div>
