--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>{{ page.title }}</title>
+<title>{{ page.title }}-小柴火的博客</title>
 <link rel="shortcut icon" href="{{ site.url }}/img/favicon.png">
 <link rel="stylesheet" href="{{ site.url }}/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{ site.url }}/css/highlight.css">
@@ -17,7 +17,7 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav nav-pills">
 						<li class="active"><a href="/">首页</a></li>
-						<li><a href="/list/">文章列表</a></li>
+						<li><a href="/categories/">文章列表</a></li>
 					</ul>
 					<form class="navbar-form pull-right">
 						<input class="span3" type="text" placeholder="关键字...">
@@ -62,7 +62,7 @@
 						<h4>文章分类</h4>
 						<ul class="list-unstyled">
 							{% for category in site.categories %}
-								<li><a href="/{{ category | first }}/">{{ category | first }}</a></li>
+								<li><a href="/categories/{{ category | first }}/">{{ category | first }}</a></li>
 							{% endfor %}
 						</ul>
 					</div>
