--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-{% include header %}
+{% include header.html %}
 <body>
 	<div class="navbar navbar-static-top">
 		<div class="navbar-inner">
@@ -19,8 +19,8 @@
 		</div>
 	</div>
 
-	{% include container %}
+	{% include container.html %}
 
-	{% include footer %}
+	{% include footer.html %}
 </body>
 </html>
