--- a/_includes/container.html
+++ b/_includes/container.html
@@ -20,9 +20,11 @@
                 <div class="classify">
                     <h4>文章分类</h4>
                     <ul class="list-unstyled">
-                        {% for category in site.categories %}
-                            <li><a href="/categories/{{ category | first }}/">{{ category | first }}</a></li>
-                        {% endfor %}
+                        <li><a href="/categories/hadoop.html/">Hadoop云计算</a></li>
+                        <li><a href="/categories/nosql.html/">NoSQL技术</a></li>
+                        <li><a href="/categories/java.html/">Java语言</a></li>
+                        <li><a href="/categories/machine_learning.html/">机器学习算法</a></li>
+                        <li><a href="/categories/mq.html/">消息队列</a></li>
                     </ul>
                 </div>
             </div>
