--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6 {
 	margin-top: 0;
 }
 
+li {
+	width: 30px;
+}
+
 .header {
 	padding-top: 40px;
 	padding-bottom: 20px;
