--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <div class="footer">
     <p>
-        关注新浪微博：<a target="_blank"
-            href="http://weibo.com/3697279945/profile?rightmod=1&wvr=5&mod=personinfo">采菇凉的小柴火</a>
+        <a target="_blank" href="https://github.com/77xiaoxin/77xiaoxin.github.io.git">Fork me on GitHub</a>
     </p>
     <p>
         <a href="#">回到顶部</a>
