--- a/_includes/container.html
+++ b/_includes/container.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header">
         <h1 class="title">King's Blog</h1>
-        <p class="description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;云中的记忆。。。</p>
+        <p class="description">活在这草泥马的年代，就要时刻保持去他妹的心态</p>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
