--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>{{ page.title }}-King's Blog</title>
+<title>{{ page.title }} - September 10th</title>
 <link rel="shortcut icon" href="{{ site.url }}/img/favicon.png">
 <link rel="stylesheet" href="{{ site.url }}/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{ site.url }}/css/highlight.css">
