--- a/_includes/container.html
+++ b/_includes/container.html
@@ -25,6 +25,7 @@
                         <li><a href="/categories/java.html">Java语言</a></li>
                         <li><a href="/categories/machine_learning.html">机器学习算法</a></li>
                         <li><a href="/categories/mq.html">消息队列</a></li>
+                        <li><a href="/categories/selenium.html">数据抓取</a></li>
                     </ul>
                 </div>
             </div>
