--- a/_includes/container.html
+++ b/_includes/container.html
@@ -28,6 +28,9 @@
                         <li><a href="/categories/selenium.html">数据抓取</a></li>
                     </ul>
                 </div>
+				<div class="advertisement">
+					<img src="{{ site.url }}/img/advertisement.jpg" width="210px" height="210px"/>
+				</div>
             </div>
         </div>
     </div>
