--- a/_includes/container.html
+++ b/_includes/container.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h1 class="title">September 10th</h1>
+        <h1 class="title">Sep.10th</h1>
         <p class="description">活在这草泥马的年代，就要时刻保持去他妹的心态</p>
     </div>
     <div class="container-fluid">
@@ -26,6 +26,7 @@
                         <li><a href="/categories/machine_learning.html">机器学习算法</a></li>
                         <li><a href="/categories/mq.html">消息队列</a></li>
                         <li><a href="/categories/selenium.html">数据抓取</a></li>
+						<li><a href="/categories/python.html">Python学习</a></li>
                     </ul>
                 </div>
 				<div class="advertisement">
