--- a/_includes/container.html
+++ b/_includes/container.html
@@ -5,6 +5,10 @@
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
+            <div><ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-5351470261193904"
+     data-ad-slot="2583188272"></ins></div>
             <div class="span8">
                 <div class="post">
                     {{ content }}
@@ -29,9 +33,9 @@
 						<li><a href="/categories/python.html">Python学习</a></li>
                     </ul>
                 </div>
-				<div class="advertisement">
+				<!--div class="advertisement">
 					<img src="{{ site.url }}/img/advertisement.jpg" width="210px" height="210px"/>
-				</div>
+				</div-->
             </div>
         </div>
     </div>
