--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,5 @@
 <link rel="stylesheet" href="{{ site.url }}/css/style.css">
 <script src="{{ site.url }}/js/jquery.min.js"></script>
 <script src="{{ site.url }}/js/bootstrap.min.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
