--- a/_includes/container.html
+++ b/_includes/container.html
@@ -3,12 +3,17 @@
         <h1 class="title">Sep.10th</h1>
         <p class="description">活在这草泥马的年代，就要时刻保持去他妹的心态</p>
     </div>
+	<div class="advertisement">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<ins class="adsbygoogle" 
+				style="display:inline-block;width:728px;height:90px"
+				data-ad-client="ca-pub-5351470261193904"
+				data-ad-slot="2583188272">
+		</ins>
+		<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+	</div>
     <div class="container-fluid">
         <div class="row-fluid">
-            <div><ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-5351470261193904"
-     data-ad-slot="2583188272"></ins></div>
             <div class="span8">
                 <div class="post">
                     {{ content }}
