--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ li {
 	padding-bottom: 20px;
 }
 
+.advertisement {
+	border: 1px solid gray;
+	height: 92px;
+	width: 720px;
+}
+
 .title {
 	padding: 3px;
 	font-size: 60px;
@@ -71,10 +77,4 @@ li {
 	text-align: center;
 	background-color: #f9f9f9;
 	border-top: 1px solid #e5e5e5;
-}
-
-.advertisement {
-	padding: 15px 0;
-	margin: 0;
-	border: solid 1px #e5e5e5;
 }
