--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	color: #555;
 	line-height: 1.8;
-	border: 1px solid gray;
 }
 
 h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6 {
@@ -21,12 +20,11 @@ li {
 .header {
 	padding-top: 40px;
 	padding-bottom: 20px;
-	border: 1px solid gray;
 }
 
 .advertisement {
 	border: 1px solid gray;
-	padding-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .title {
