--- a/_includes/container.html
+++ b/_includes/container.html
@@ -36,6 +36,7 @@
                         <li><a href="/categories/mq.html">消息队列</a></li>
                         <li><a href="/categories/selenium.html">数据抓取</a></li>
 						<li><a href="/categories/python.html">Python学习</a></li>
+						<li><a href="/categories/maven.html">Maven</a></li>
                     </ul>
                 </div>
 				<!--div class="advertisement">
