--- a/_includes/container.html
+++ b/_includes/container.html
@@ -50,6 +50,17 @@
 					(adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
 				</div>
+				<div class="advertisement">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- 链接广告 -->
+					<ins class="adsbygoogle"
+						 style="display:inline-block;width:200px;height:90px"
+						 data-ad-client="ca-pub-5351470261193904"
+						 data-ad-slot="4300267070"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
             </div>
         </div>
     </div>
