add Google Search

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,8 +10,9 @@
 						<li class="active"><a href="/">首页</a></li>
 						<li><a href="/categories/">文章列表</a></li>
 					</ul>
-					<form class="navbar-form pull-right">
-						<input class="span3" type="text" placeholder="关键字...">
+					<form class="navbar-form pull-right" accept-charset="utf-8" method="get" action="http://google.com/search">
+						<input class="span3" placeholder="关键字..." type="text" results="0" name="q" />
+						<input type="hidden" value="site:sep10.com" name="q" />
 						<button type="submit" class="btn">搜索</button>
 					</form>
 				</div>
